--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ report_imgs/overall_results_topic_models.png
 report_imgs/pretty_overall.png
 report_imgs/tf_idf_best_results.png
 report_imgs/vector_table.docx
+viz/ewarren.png
+viz/MikeWarner.png
+viz/RandPaul.png
+viz/realDonaldTrump.png
+viz/SpeakerPelosi.png
+viz/tedcruz.png
